js bigint > constructor & toString override

--- a/laboratory/javascript/big_integer/example.html
+++ b/laboratory/javascript/big_integer/example.html
@@ -2,6 +2,7 @@
 <HTML>
 <BODY>
 	<H2>Example</H2>
-	<SCRIPT src="bigint.js"/>
+	<SCRIPT src="bigint_v1.js"></SCRIPT>
+	<SCRIPT src="test_v1.js"></SCRIPT>
 </BODY>
 </HTML>
