js bigint > 테스트 스크립트 수정

--- a/laboratory/javascript/big_integer/factorial.html
+++ b/laboratory/javascript/big_integer/factorial.html
@@ -4,7 +4,6 @@
 	<H2>Example</H2>
 	<SCRIPT src="bigint_v1.js"></SCRIPT>
 	<SCRIPT src="factorial.js"></SCRIPT>
-	<SCRIPT src="prime.js"></SCRIPT>
 
 	<div id="result"></div>
 
@@ -12,7 +11,7 @@
 		function runExample(){
 			var result = document.getElementById("result");
 			
-			var strFact100 = facrotials();
+			var strFact100 = facrotials(100);
 
 			result.innerText = strFact100;
 		}
